# jp225-monitor

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  USER_GUIDE.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
collector/: alertCollector.test.ts  alertCollector.ts  index.ts  lock.test.ts  lock.ts  openGuard.test.ts  record.test.ts  record.ts  session.test.ts  session.ts
docs/: USER_GUIDE.html  index.html  tauri-setup.md
scripts/: acceleration-9y-validate.mts  adaptive-regime.mts  adr-n-optimize.mts  adr-night-explain.mts  adr-rule-backtest.mts  alert-audit.mts  alert-quality-by-trend.mts  alert-quality.mts  analyze-5m-windows.mjs  analyze-alert-windows.mjs  analyze-jp225-10s.mjs  analyze-jp225-candles.mjs  analyze-jp225-csv.mjs  basedata-publish.mjs  basedata-publish.mts  break-rebreak-backtest.mts  break-reentry-recovery.mts  build-backtest-db.mts  build-collector.mjs  build-server.mjs  copy-collector.mjs  copy-sidecar.mjs  dtb-breakdown.mts  entry-attempt-bracket-backtest.mts  fetch-nkf-daily.mjs  fetch-nkf-vs-oanda.mjs  gem-jp225-reproduce.mts  gem-port-backtest.mts  gen-placeholder-icons.mjs  invert-test.mts  kill-sidecar.mjs  level-validity.mts  make-latest-json.mjs  merge-db.mjs  node-sqlite-shim.d.ts  node-sqlite.d.ts  package-sea.mjs  release-build.mjs  slope-9y-validate.mts  sr-fakeout-early2nd.mts  (+13 more)
server/: alertArbitration.test.ts  alertCooldown.ts  (+74 more)
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+173 files in other folders)
